--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-_extensions
-_site
-.quarto
-cooking
-ressources
+/_extensions
+/_site
+/.quarto
+/cooking
+/ressources
 
 _quarto.yml
 
 *.qmd
-/.quarto/
+
